# CMOR-438-SP-2026

./: pyproject.toml  requirements.txt  setup.py
Supervised_Learning/: The_Perceptron.ipynb  gradient_desc_class  gradient_descent_scratch.ipynb  perceptron_class
Supervised_Learning/examples/: gradient_descent.ipynb
examples/Supervised_Learning/: The_Perceptron.ipynb  gradient_descent.ipynb  logistic_regression.ipynb
examples/Supervised_Learning/The Perceptron/: The_Perceptron.ipynb
src/rice_ml/: __init__.py  postprocessing.py  preprocessing.py
src/rice_ml/Neural_Networks/: __init__.py  dense_network_class.py  neural_network_class.py  preprocessing.py
src/rice_ml/Supervised_Learning/: __init__.py  decision_tree_class.py  decision_tree_regressor.py  gradient_desc_class.py  knn_class.py  linear_regression_class.py  logistic_regression_class.py  multilayer_perceptron_class.py  perceptron_class.py  single_neuron_model_class.py
src/rice_ml/Supervised_Learning/ensemble_methods/: bagging_forest_class.py  hard_voting_class.py  random_forest_class.py
src/the_perceptron.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
