[project]
name = "rice_ml"
version = "0.1.0"
description = "CMOR 438 Custom Machine Learning Library"
requires-python = ">=3.8"
authors = [{name = "Cara Carr", email = "cfc6@rice.edu"}]
readme = "README.md"
keywords = ["machine learning", "data science", "neural networks"]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "seaborn>=0.12",
    "mlxtend>=0.23",
    "tabulate>=0.9"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["src"]} # rice_ml package found in 'src'

[project.optional-dependencies]
dev = ["pytest"]
tensorflow = ["tensorflow>=2.16,<2.19"]

[project.urls]
"Homepage" = "https://github.com/ccarr-x/CMOR-438-SP-2026"  
